@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - add_schema() now dies with the errors themselves, rather than an
+            object that serializes to an unhelpful value in uncaught die()s.
 
 0.513     2021-06-26 19:45:51Z
           - skip acceptance test for integer overflow when nvsize is too
